--- a/WorldServer/packages.config
+++ b/WorldServer/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Appccelerate.StateMachine" version="4.4.0" targetFramework="net452" />
+  <package id="AStarPathFinder" version="1.0.0" targetFramework="net48" />
   <package id="BehaviourTree" version="1.0.73" targetFramework="net48" />
   <package id="BehaviourTree.FluentBuilder" version="1.0.70" targetFramework="net472" />
   <package id="Evolve" version="3.0.0" targetFramework="net48" />
