--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -38,7 +38,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>world.ico</ApplicationIcon>
-  </PropertyGroup>  
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>..\bin\Debug\</OutputPath>
@@ -64,7 +64,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>WorldServer.Core</StartupObject>
-  </PropertyGroup>  
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Appccelerate.StateMachine, Version=4.4.0.0, Culture=neutral, PublicKeyToken=917bca444d1f2b4c, processorArchitecture=MSIL">
       <HintPath>..\packages\Appccelerate.StateMachine.4.4.0\lib\netstandard1.0\Appccelerate.StateMachine.dll</HintPath>
@@ -644,6 +644,7 @@
     <Compile Include="World\Scripting\Events\Halloween\BasicHalloween.cs" />
     <Compile Include="World\Scripting\Lairs\Beastlords\BasicBeastlord.cs" />
     <Compile Include="World\Scripting\Lairs\Beastlords\AllBeastlords.cs" />
+    <Compile Include="World\Scripting\APublicQuestScript.cs" />
     <Compile Include="World\Scripting\PublicQuests\BasicPublicQuest.cs" />
     <Compile Include="World\Scripting\PublicQuests\Destro\DeathstoneQuarry.cs" />
     <Compile Include="World\Scripting\PublicQuests\Order\RavenHostVanguard.cs" />
@@ -799,10 +800,10 @@
   <ItemGroup>
     <Content Include="Config\WorldConfig.xml" />
     <Content Include="world.ico" />
-    <Content Include="WarZone64.dll">    
-    <CopyToOutputDirectory>Always</CopyToOutputDirectory>      
-    </Content>      
-  </ItemGroup>  
+    <Content Include="WarZone64.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
