--- a/PWARClientLauncher/App.config
+++ b/PWARClientLauncher/App.config
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="PWARClientLauncher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
+  <appSettings>
+    <add key="ServerPatchIPAddress" value="127.0.0.1" />
+    <add key="ServerPatchPort" value="8080" />
+    <add key="PatchDirectory" value="..\.." />
+    <add key="AutoLaunch" value="true" />
+    <add key="PatchMYP" value="false" />
+    <add key="PatchExe" value="true" />
+    <add key="LaunchLocal" value="true" />
+    <add key="LastUserCode" value="ander" />
+    <add key="LastUSerPass" value="ander" />
+  </appSettings>
+
+  <userSettings>
+    <PWARClientLauncher.Properties.Settings>
+      <setting name="LastRealm" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="LastLogin" serializeAs="String">
+        <value />
+      </setting>
+    </PWARClientLauncher.Properties.Settings>
+  </userSettings>
 </configuration>
